# Distributed-DB

./: .gitmodules  CMakeLists.txt  README.md
C++/: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh  ddb.config.default
C++/.config.default/: ddb.config  network-discovery
C++/DMap/: CMakeLists.txt
C++/DMap/cmake_modules/: FindRapidJSON.cmake
C++/DMap/inc/: NetworkManager.h  dmap.h
C++/DMap/src/: NetworkManager.cpp
C++/client/: clear_request  count_request  ddb_request  delete_request  find_request  get_request  insert_request  main  main.cpp  update_request  upsert_request
C++/inc/: DMap.h
C++/src/: main.cpp
Java/: .gitignore  Client.java  IpFinder.java  JSONTest.java  KeyValueStore.java  Readme.md  Server.config  Server.java  kvs.JSON  run
Java/new/: Client.java  ImClient.java  ImServer.java  IpFinder.java  KeyValueStore.java  Server.java  Singleton.java
Java/src/main/java/com/DDB/A2/: Client.config  Client.java  IpFinder.java  KeyValueStore.java  Server.java
Java/src/main/java/com/DDB/A3/: BackupNode.java  FollowerNode.java  FollowerNodes.java  GroupChat.java  IpFinder.java  KVSNetworkAPI.java  KeyValueStore.java  Peer.config  Peer.java  ReportNode.java
Python/: .gitignore  KeyVal.py  KeyValTest.py  KeyValueStore.py  client.py  node.py  server.py  test_KeyValueStore.py  useClient.py
src/: main.cpp
